--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -40,4 +42,12 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //Dagger
+    implementation "com.google.dagger:dagger:2.40.5"
+    implementation "com.google.dagger:dagger-android:2.40.5"
+    implementation "com.google.dagger:dagger-android-support:2.40.5"
+    kapt "com.google.dagger:dagger-compiler:2.40.5"
+    kapt "com.google.dagger:dagger-android-processor:2.40.5"
+    annotationProcessor "com.google.dagger:dagger-compiler:2.40.5"
 }
